mission code added

--- a/HTML_CSS_Mission/Mission-01/stylesheets/pages/discovery.css
+++ b/HTML_CSS_Mission/Mission-01/stylesheets/pages/discovery.css
@@ -139,6 +139,7 @@ a {
 .active:hover .arrow::before,
 .active:focus .arrow::before {
     content: '구매하기';
+    padding-right: 10px;
 }
 
 .small-box {
