hidden class add

--- a/HTML_CSS_Mission/Mission-03/stylesheets/pages/category.css
+++ b/HTML_CSS_Mission/Mission-03/stylesheets/pages/category.css
@@ -136,6 +136,10 @@
     position: relative;
 }
 
+.hidden {
+    display: none;
+}
+
 .living-carousel-banner {
     position: absolute;
     top: 483px;
