--- a/HTML_CSS_Mission/Mission-02/stylesheets/pages/offer.css
+++ b/HTML_CSS_Mission/Mission-02/stylesheets/pages/offer.css
@@ -31,6 +31,7 @@
 
 .shopping-list {
     display: flex;
+    justify-content: center;
 }
 
 .shopping-item {
@@ -95,4 +96,16 @@
     background: url("../../assets/sprites/rating-stars.png");
     width: 68px;
     height: 12px;
+}
+
+.four-point-five {
+    background-position: 0% 90%;
+}
+
+.four {
+    background-position: 0% 80%;
+}
+
+.five {
+    background-position: 0% 100%;
 }
