--- a/HTML_CSS_Mission/Mission-03/stylesheets/pages/category.css
+++ b/HTML_CSS_Mission/Mission-03/stylesheets/pages/category.css
@@ -1,5 +1,6 @@
 
 
+
 .container {
     padding: 100px 130px;
 }
@@ -11,11 +12,15 @@
 .logo {
     width: 246px;
     height: 56px;
+    margin-bottom: 48px;
 }
 
 
 .category {
-    margin-top: 48px;
+    margin: 0 auto;
+    width: 1020px;
+    height: 1376px;
+    display: block;
 }
 
 .category-title {
@@ -108,6 +113,7 @@
     width: 124px;
     height: 220px;
     margin-top: 12px;
+    text-align: left;
 }
 
 .living-keyword-list, .kitchen-keyword-list {
