--- a/HTML_CSS_Mission/Mission-01/stylesheets/common/base.css
+++ b/HTML_CSS_Mission/Mission-01/stylesheets/common/base.css
@@ -1,6 +1,27 @@
 /* Base 스타일 작성 */
-* {
-    box-sizing: border-box;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 16px;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body {
+  font: 1.6rem/1.15 var(--font-family);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a img {
+  vertical-align: middle;
+}
+
+button {
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
